[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/enemies/simpleSearchingEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f3.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f5.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f6.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f7.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f0.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f1.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f8.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f10.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/enemies/normalGuard/walking/guard_w_f9.png" type="Texture" id=12]
[ext_resource path="res://scenes/enemies/simpleSearchingGuard/simpleSearchingEnemy.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "walking",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 21 )

[node name="NormalGuard" instance=ExtResource( 13 )]
script = ExtResource( 1 )
ghost_dimension = false

[node name="LeftSearchRay" parent="." index="0"]
enabled = false

[node name="LeftFloorCheck" parent="." index="4"]
enabled = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]
frames = SubResource( 1 )
animation = "walking"
frame = 1

[node name="RightMovementCollision" type="CollisionShape2D" parent="." index="6"]
position = Vector2( 1, 3 )
shape = SubResource( 2 )

[node name="LeftMovementCollision" type="CollisionShape2D" parent="." index="7"]
position = Vector2( -1, 3 )
shape = SubResource( 3 )
disabled = true
